# advent_of_code

./: Cargo.toml
01/: main.rs
benches/: bench.rs  day01.rs
examples/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs
