[package]
name = "aoc-2020"
version = "0.0.0"
edition = "2021"

[dependencies]
# chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
validator = { version = "0.14", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[features]
defaults = []
# read_inputs = []